--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
 
 before_install:
   - go get -u golang.org/x/tools/cmd/cover
-  - go get -u github.com/golang/lint/golint
+  - if [[ $TRAVIS_GO_VERSION != go1.4* ]]; then go get -u github.com/golang/lint/golint; fi
   - go get -u golang.org/x/tools/cmd/vet
   - sudo apt-get update
   - sudo apt-get install -y build-essential yasm libfaac-dev libmp3lame-dev libtheora-dev libvorbis-dev libvpx-dev libx264-dev libxvidcore-dev
@@ -17,7 +17,11 @@ before_install:
 
 script:
   - cd $TRAVIS_BUILD_DIR
-  - make
+  - make gofmt
+  - if [[ $TRAVIS_GO_VERSION != go1.4* ]]; then make golint; fi
+  - make govet
+  - make test
+  - make cover
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
