--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ go:
 before_install:
   - echo $TRAVIS_GO_VERSION
   - go get -u golang.org/x/tools/cmd/cover
-  - if [[ $TRAVIS_GO_VERSION != go1.4* ]]; then go get -u github.com/golang/lint/golint; fi
+  - if [[ $TRAVIS_GO_VERSION != 1.4* ]]; then go get -u github.com/golang/lint/golint; fi
   - go get -u golang.org/x/tools/cmd/vet
   - sudo apt-get update
   - sudo apt-get install -y build-essential yasm libfaac-dev libmp3lame-dev libtheora-dev libvorbis-dev libvpx-dev libx264-dev libxvidcore-dev
@@ -19,7 +19,7 @@ before_install:
 script:
   - cd $TRAVIS_BUILD_DIR
   - make gofmt
-  - if [[ $TRAVIS_GO_VERSION != go1.4* ]]; then make golint; fi
+  - if [[ $TRAVIS_GO_VERSION != 1.4* ]]; then make golint; fi
   - make govet
   - make test
   - make cover
