--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ go:
 before_install:
   - echo $TRAVIS_GO_VERSION
   - go get -u golang.org/x/tools/cmd/cover
-  - if [[ $TRAVIS_GO_VERSION != 1.4* ]]; then go get -u github.com/golang/lint/golint; fi
-  - go get -u golang.org/x/tools/cmd/vet
+  - if [[ $TRAVIS_GO_VERSION == 1.6* ]]; then go get -u github.com/golang/lint/golint; fi
   - sudo apt-get update
   - sudo apt-get install -y build-essential yasm libfaac-dev libmp3lame-dev libtheora-dev libvorbis-dev libvpx-dev libx264-dev libxvidcore-dev
   - wget -O ffmpeg.tar.bz2 http://ffmpeg.org/releases/ffmpeg-3.0.tar.bz2
@@ -18,8 +17,9 @@ before_install:
 
 script:
   - cd $TRAVIS_BUILD_DIR
+  - go get -t ./...
   - make gofmt
-  - if [[ $TRAVIS_GO_VERSION != 1.4* ]]; then make golint; fi
+  - if [[ $TRAVIS_GO_VERSION == 1.6* ]]; then make golint; fi
   - make govet
   - make test
   - make cover
